# SLAM_BackEnd

./: .gitignore  CMakeLists.txt  README.md
examples/: 10_BA.cpp  1_helloworld.cpp  2_helloworld_numeric_diff.cpp  3_helloworld_analytic_diff.cpp  4_powell.cpp  5_curve_fitting.cpp  6_robust_curve_fitting.cpp  7_simple_BA.cpp  8_rosenbrock.cpp  9_beale.cpp
module/: CMakeLists.txt
module/include/: bal_problem.h  module.hpp  random.h  snavely_reprojection_error.h
module/src/: bal_problem.cpp
